# MusicPlayer

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  resources.qrc
